--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -371,9 +371,10 @@
               displayName: 'trusted storage, storage, access, storage access, security'
         - name: Seguridad de las redes
           items:
-            - name: Creación de una cuenta de Media Services y una cuenta de almacenamiento con un vínculo privado
-              href: security-private-link-how-to.md
-              displayName: 'security, private link, links, firewall, storage account, storage, private, links, secure'
+            - name: Conexiones de punto de conexión privado
+              href: security-private-link-connect-private-endpoint-concept.md
+            - name: "Private\_Link con Azure\_Media\_Services"
+              href: security-private-link-concept.md
             - name: Lista de direcciones IP permitidas de entrega de claves
               href: drm-content-protection-key-delivery-ip-allow.md
               displayName: 'DRM, AES, content key, allow list, IP, whitelist, access control, IP allow list, IP restriction, key delivery, license delivery, AES Key, AES-128, common encryption, security, secure, protect, encrypt'
@@ -621,8 +622,10 @@
               href: ../../active-directory/managed-identities-azure-resources/howto-assign-access-portal.md
         - name: Seguridad de las redes
           items:
-            - name: Uso de Private Link con una cuenta de almacenamiento y multimedia
-              href: security-private-link-how-to.md
+            - name: "Uso de un Private\_Link con un punto de conexión de streaming"
+              href: security-private-link-streaming-endpoint-how-to.md
+            - name: "Uso de Private\_Link con la plantilla de ARM"
+              href: security-private-link-arm-how-to.md
               displayName: 'security, private link, links, firewall, storage account, storage, private, links, secure'
         - name: Streaming seguro
           items:
