--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: sidram
   ms.author: sidram
   ms.date: 09/16/2019
-  ms.openlocfilehash: 2567279bd2c22a2b6f0ff7bf5203efcce56b2466
-  ms.sourcegitcommit: 42a4d0e8fa84609bec0f6c241abe1c20036b9575
+  ms.openlocfilehash: 226ebb46cdd72b93549c0345fc009f2dd0627c39
+  ms.sourcegitcommit: 106f5c9fa5c6d3498dd1cfe63181a7ed4125ae6d
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 01/08/2021
-  ms.locfileid: "98015579"
+  ms.lasthandoff: 11/02/2021
+  ms.locfileid: "131013505"
 landingContent:
 - title: Acerca de Azure Stream Analytics
   linkLists:
@@ -141,9 +141,9 @@ landingContent:
     links:
     - text: Uso de Machine Learning para detectar anomalías
       url: stream-analytics-machine-learning-anomaly-detection.md
-    - text: Realización de análisis de sentimiento con Azure Machine Learning Studio (clásico)
+    - text: Realización de análisis de sentimiento con Machine Learning Studio (clásico)
       url: stream-analytics-machine-learning-integration-tutorial.md
-    - text: Escalado de trabajos con funciones de Azure Machine Learning Studio (clásico)
+    - text: Escalado de trabajos con funciones de Machine Learning Studio (clásico)
       url: stream-analytics-scale-with-machine-learning-functions.md
 - title: Creación y administración de trabajos con herramientas para desarrolladores
   linkLists:
